--- a/src/locales/pl/projects.json
+++ b/src/locales/pl/projects.json
@@ -1,4 +1,4 @@
 {
-  "myFinances.title": "WordZone",
-  "myFinances.link": "WordZone"
+  "WordZone.desc": "polskie tłumaczenie dla MyFinances",
+  "MyFinances.desc": "polskie tłumaczenie dla MyFinances"
 }
