Prepared components for bilingualism

--- a/src/locales/pl/projects.json
+++ b/src/locales/pl/projects.json
@@ -1,4 +1,5 @@
 {
+  "header": "Projekty",
   "WordZone.desc": "polskie tłumaczenie dla MyFinances",
   "MyFinances.desc": "polskie tłumaczenie dla MyFinances"
 }
