completed structure and content of the page

--- a/src/locales/en/me.json
+++ b/src/locales/en/me.json
@@ -1,4 +1,11 @@
 {
   "desc": "Computer Science Student @ Warsaw University of Life Sciences",
-  "list": ["About", "Projects", "Experience", "skills"]
+  "list": [
+    "About",
+    "Skills",
+    "Experience",
+    "Education",
+    "Projects",
+    "Languages"
+  ]
 }
