--- a/src/locales/en/skills.json
+++ b/src/locales/en/skills.json
@@ -6,7 +6,7 @@
       "Strong willingness to learn",
       "Adaptability",
       "Problem-solving",
-      "Critical thinking",
+      "Analytical and critical thinking",
       "Teamwork",
       "Good interpersonal skills"
     ]
