--- a/src/locales/pl/about.json
+++ b/src/locales/pl/about.json
@@ -1,1 +1,4 @@
-{}
+{
+  "title": "About Me",
+  "desc": "I am a Computer Science student at Warsaw University of Life Sciences, currently in my third year of studies. I am eager to develop my skills and gain hands-on experience in the IT industry. I have foundational skills in software engineering and web development and I am open to new challenges and learning opportunities."
+}
