--- a/src/locales/pl/education.json
+++ b/src/locales/pl/education.json
@@ -1,1 +1,7 @@
-{}
+{
+  "title": "Education",
+  "school": "Warsaw University of Life Sciences",
+  "time": "2022 - present",
+  "major": "jakiś",
+  "desc": "Engineer's degree in Computer Science, specialization in Information Systems Engineering"
+}
