--- a/src/locales/pl/projects.json
+++ b/src/locales/pl/projects.json
@@ -1,5 +1,5 @@
 {
-  "header": "Projekty",
+  "title": "Projekty",
   "WordZone.desc": "polskie tłumaczenie dla MyFinances",
   "MyFinances.desc": "polskie tłumaczenie dla MyFinances"
 }
