Added polish translation

--- a/src/locales/en/experience.json
+++ b/src/locales/en/experience.json
@@ -1,5 +1,5 @@
 {
-  "title": "Experience",
+  "title": "IT Experience",
   "company": "SVZ Tomaszów Sp. z o.o. - ICT employee",
   "time": "Aug 2024 - Sep 2024",
   "desc": "I carried out the company's rollout process, handling all related technical issues and ensuring a smooth transition. My duties included integrating employees into the new system, troubleshooting and resolving infrastructure problems, as well as daily tasks such as issuing equipment, repairing devices, and providing technical support."
