--- a/src/locales/pl/about.json
+++ b/src/locales/pl/about.json
@@ -1,4 +1,4 @@
 {
-  "title": "About Me",
-  "desc": "I am a Computer Science student at Warsaw University of Life Sciences, currently in my third year of studies. I am eager to develop my skills and gain hands-on experience in the IT industry. I have foundational skills in software engineering and web development and I am open to new challenges and learning opportunities."
+  "title": "O mnie",
+  "desc": "Jestem studentem trzeciego roku infromatyki w Szkole Głównej Gospodarstawa Wiejskiego w Warszawie. Szukam miejsca w którym mógłbym rozwinąć swoje umiejętności programowania i zdobyć praktyczne doświadczenie w branży IT. Posiadam bardzo dobre podstawy do dalszej nauki z zakresu inżynierii oprogramowania, tworzenia stron internetowych oraz zarządzania bazami danych. Z chęcią podejme sie nowych wyzwań, które umożliwią mi dalszy rozwój zawodowy i osobisty."
 }
