--- a/src/locales/pl/experience.json
+++ b/src/locales/pl/experience.json
@@ -1,6 +1,6 @@
 {
-  "title": "Experience",
-  "company": "SVZ Tomaszów Sp. z o.o. - ICT employee",
-  "time": "Aug 2024 - Sep 2024",
-  "desc": "I carried out the company's rollout process, handling all related technical issues and ensuring a smooth transition. My duties included integrating employees into the new system, troubleshooting and resolving infrastructure problems, as well as daily tasks such as issuing equipment, repairing devices, and providing technical support."
+  "title": "Doświadczenie IT",
+  "company": "SVZ Tomaszów Sp. z o.o. - pracownik ICT",
+  "time": "Sie 2024 - Wrz 2024",
+  "desc": "Realizowałem proces migracji i wdrożenia nowego systemu w firmie, odpowiadając za wszystkie związane z tym aspekty techniczne i dbając o jego sprawne przeprowadzenie. Do moich obowiązków należała integracja pracowników z nowym systemem, montaż i konfiguracja nowych urządzeń, usuwanie błędów powstałych w wyniku migracji, rozwiązywanie problemów infrastrukturalnych, a także codzienne zadania, takie jak wydawanie sprzętu, naprawa urządzeń oraz świadczenie wsparcia technicznego."
 }
