Completed styles; refactored some components a little for styling purposes

--- a/src/locales/pl/experience.json
+++ b/src/locales/pl/experience.json
@@ -1,6 +1,7 @@
 {
   "title": "Doświadczenie IT",
-  "company": "SVZ Tomaszów Sp. z o.o. - pracownik ICT",
+  "position": "Pracownik ICT",
+  "company": "SVZ Tomaszów Sp. z o.o.",
   "time": "Sie 2024 - Wrz 2024",
   "desc": "Realizowałem proces migracji i wdrożenia nowego systemu w firmie, odpowiadając za wszystkie związane z tym aspekty techniczne i dbając o jego sprawne przeprowadzenie. Do moich obowiązków należała integracja pracowników z nowym systemem, montaż i konfiguracja nowych urządzeń, usuwanie błędów powstałych w wyniku migracji, rozwiązywanie problemów infrastrukturalnych, a także codzienne zadania, takie jak wydawanie sprzętu, naprawa urządzeń oraz świadczenie wsparcia technicznego."
 }
