--- a/src/locales/en/education.json
+++ b/src/locales/en/education.json
@@ -2,7 +2,7 @@
   "title": "Education",
   "school": "Warsaw University of Life Sciences",
   "time": "2022 - present",
-  "major": "Computer Science, Information Systems Engineering",
+  "major": "Computer Science",
   "spec": "Information Systems Engineering",
   "desc": "I'm on third year of my Engineer's degree in Computer Science, specjalizing in Information systems engineering. As part of my specialization, I have developed strong skills in creating and interpreting business documentation and notation, including UML diagrams, BPMN models, and other analytical tools. I have also gained experience in designing and managing data warehouses, focusing on structuring, optimizing, and maintaining complex data environments to support business intelligence and analytics. Additionally, I possess a solid foundation in programming and web development, which allows me to better understand and bridge the gap between technical and business requirements."
 }
