--- a/src/locales/en/about.json
+++ b/src/locales/en/about.json
@@ -1,4 +1,4 @@
 {
   "title": "About Me",
-  "desc": "I am a Computer Science student at Warsaw University of Life Sciences, currently in my third year of studies. I am eager to develop my skills and gain hands-on experience in the IT industry. I have foundational skills in software engineering, web development and databses. I am open to new challenges and learning opportunities."
+  "desc": "I am a Computer Science student at Warsaw University of Life Sciences, currently in my fourth year of studies. I am eager to develop my skills and gain hands-on experience in the IT industry. I have foundational skills in software engineering, web development and databses. I am open to new challenges and learning opportunities."
 }
