--- a/src/locales/pl/about.json
+++ b/src/locales/pl/about.json
@@ -1,4 +1,4 @@
 {
   "title": "O mnie",
-  "desc": "Jestem studentem trzeciego roku infromatyki w Szkole Głównej Gospodarstawa Wiejskiego w Warszawie. Szukam miejsca w którym mógłbym rozwinąć swoje umiejętności programowania i zdobyć praktyczne doświadczenie w branży IT. Posiadam bardzo dobre podstawy do dalszej nauki z zakresu inżynierii oprogramowania, tworzenia stron internetowych oraz zarządzania bazami danych. Z chęcią podejme sie nowych wyzwań, które umożliwią mi dalszy rozwój zawodowy i osobisty."
+  "desc": "Jestem studentem czwartego roku infromatyki w Szkole Głównej Gospodarstawa Wiejskiego w Warszawie. Szukam miejsca w którym mógłbym rozwinąć swoje umiejętności programowania i zdobyć praktyczne doświadczenie w branży IT. Posiadam bardzo dobre podstawy do dalszej nauki z zakresu inżynierii oprogramowania, tworzenia stron internetowych oraz zarządzania bazami danych. Z chęcią podejme sie nowych wyzwań, które umożliwią mi dalszy rozwój zawodowy i osobisty."
 }
